--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,6 +20,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <%= javascript_include_tag :bootstrap %>
     <%= javascript_include_tag :ie10_viewport_bug_workaround %>
+    <%= favicon_tag 'favicon.png' %>
   </head>
 
   <body class="<%= page_classes %>">
