--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,7 +4,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta property="og:title" content="Colorgy 徵才 - we want YOU!">
+    <meta property="og:title" content="Colorgy 徵才 - We Want YOU!">
     <meta property="og:description" content="歡樂一百點，徵的就是你！趕快進來看看有什麼職缺吧！">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://i.imgur.com/GHZEP2q.jpg?1">
