--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -204,20 +204,18 @@
           </div>
         </div>
         <div class="col-sm-4 jobCol">
-          <div class="jobImageLayer jobImageLayer6">
+          <div class="jobImageLayer jobImageLayer10">
           	<div class="mask"></div>
             <div class="jobInfo">
-              <h2 class="jobInfoTitle">有梗有料行銷小編</h2>
+              <h2 class="jobInfoTitle">Senior Rails Developer</h2>
               <p>【薪資範圍】<br/>
               依能力面議</p>
-              <p>【工作目標】<br/>
-              想行銷策略與規劃、跟我們一起想出（或找人寫出）超有梗可以引發話題的文章</p>
               <p>【基本需求】<br/>
-              有實際行銷經驗及相關知識（自學或修課皆可）、運用文字能力強、有責任感，能處理重複性高的日常事務、樂於溝通、有幽默感</p>
-              <p>【加分條件】<br/>備作品紀錄／寫過不錯的文章／能寫有梗也能寫溫馨女孩文</p>
+              兩年以上 Rails 開發經驗、Rails performance tuning、熟悉 RESTful JSON API、具 Web API for Android or iOS 開發經驗、熟悉 Git Version Control、熟悉 Mac/Linux 系統與環境操作指令、熟悉撰寫測試程式（Rspec）、熟悉 AWS 架構以及完整佈署專案之能力</p>
+              <p>【加分條件】<br/>熟悉前端 Javascript、React.js 及基本 SASS、Bootstrap 用法／有金流、支付軟體相關開發經驗／熟悉一種以上的設計模式及軟體開發模型／Mac OS X 系統使用者／有專案管理經驗、願意提點 Junior 工程師</p>
             </div>
             <div class="defaultCoverText">
-	            <h2>有梗有料行銷小編</h2>
+	            <h2>Senior Rails Developer</h2>
             </div>
           </div>
         </div>
@@ -293,6 +291,27 @@
           </div>
         </div>
       </div>
+
+    <div class="row jobRow">
+      <div class="col-sm-4 col-sm-offset-4 jobCol">
+          <div class="jobImageLayer jobImageLayer6">
+            <div class="mask"></div>
+            <div class="jobInfo">
+              <h2 class="jobInfoTitle">有梗有料行銷小編</h2>
+              <p>【薪資範圍】<br/>
+              依能力面議</p>
+              <p>【工作目標】<br/>
+              想行銷策略與規劃、跟我們一起想出（或找人寫出）超有梗可以引發話題的文章</p>
+              <p>【基本需求】<br/>
+              有實際行銷經驗及相關知識（自學或修課皆可）、運用文字能力強、有責任感，能處理重複性高的日常事務、樂於溝通、有幽默感</p>
+              <p>【加分條件】<br/>備作品紀錄／寫過不錯的文章／能寫有梗也能寫溫馨女孩文</p>
+            </div>
+            <div class="defaultCoverText">
+              <h2>有梗有料行銷小編</h2>
+            </div>
+          </div>
+      </div>
+    </div>
 
     </div> <!-- /Job Introduction -->
 
